# SPCI-code_xXuXie

./: 02_CreatePackage_COPILOT.md  03_WhyPackageConversionNeeded_COPILOT.md  04_PackageConversion.md  05_CompletePackageTest_COPILOT.md  06_HandlingForkSyncConflicts_COPILOT.md  07_SetuptoolsRestructuring.md  08_NumpyCompatibilityFix.md  09_DependencyConflictResolution.md  CLAUDE.md  Recommendations.md  __init__.py  diagnostic_test.py  migration_from_sklearn-quantile_to_quantile-forest.md  pyproject.toml  requirements.txt  setup.py  test_results_2025-11-08.txt  tutorial_electric_EnbPI_SPCI.ipynb
spci/: PI_class_EnbPI.py  SPCI_class.py  data.py  utils_EnbPI.py  utils_SPCI.py  visualize.py
tests/: conftest.py  test_data_loading.py  test_enbpi_baseline.py  test_prediction_intervals.py  test_spci_baseline.py
