[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spci"
version = "0.1.0"
description = "Sequential Prediction Conformal Inference Package"
authors = [{name = "SPCI Contributors"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "statsmodels",
    "sklearn_quantile", 
    "skranger",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["spci*"]

[tool.setuptools.package-data]
spci = ["Data/*.csv"]
